--- a/BankManagement/main/templates/main/base.html
+++ b/BankManagement/main/templates/main/base.html
@@ -1,4 +1,4 @@
-{% load static %} {% load django_browser_reload %}
+{% load static %} 
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
   <head>
@@ -47,8 +47,6 @@
       <p>📞 Contact us: 1800-111-222 | ✉️ support@pigibank.com</p>
       <p>&copy; 2025 Pigi Bank. All rights reserved.</p>
     </footer>
-
-    {% django_browser_reload_script %}
     <script src="{% static 'main/script.js' %}" defer></script>
   </body>
 </html>
